# critterchat

./: .gitignore  ADMINISTRATION.md  Containerfile  DEVELOPING.md  FEDERATION.md  PRODUCTION.md  PROTOCOL.md  README.md  TODO  TODO.md  compose.yml  justfile
backend/: .coveragerc.toml  .flake8  .mypy.ini  .pytest.toml  MANIFEST.in  QUICKSTART.md  config.yaml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py
backend/critterchat/: __main__.py  cli.py
backend/critterchat/common/: __init__.py  aes.py  emoji.py  emojicategories.py  enums.py  text.py  time.py
backend/critterchat/config/: __init__.py  config.py
backend/critterchat/data/: __init__.py  attachment.py  base.py  data.py  mastodon.py  migration.py  room.py  types.py  user.py
backend/critterchat/data/migrations/: env.py
backend/critterchat/data/migrations/versions/: 08469a133de7_add_primary_keys_where_necessary_part_1.py  11caab5cdaf5_add_info_panel_setting_to_settings.py  12ba98c5d86c_add_preference_column_for_combined_.py  16ac62ce384a_add_seen_column_to_invites_for_badging_.py  19fd56bdf944_add_data_migration_tracking_table.py  1acf5383e9ee_add_settings_table_so_we_can_persist_.py  (+52 more)
backend/critterchat/http/: __init__.py  account.py  app.py  attachments.py  chat.py  login.py  messagepump.py  socket.py  upload.py  welcome.py
backend/critterchat/http/static/: __init__.py  autocomplete.css  chat.css  emojisearch.css  highlight.css  home.css  jquery.modal.0.9.1.min.css  jquery.modal.css  theme.css
backend/critterchat/http/templates/: base.html
backend/critterchat/manage/: __main__.py  cli.py
backend/critterchat/service/: __init__.py  attachment.py  emote.py  mastodon.py  message.py  user.py
backend/federateddergchat/common/: __init__.py  emoji.py
backend/federateddergchat/config/: config.py
backend/federateddergchat/data/: __init__.py  data.py  room.py  user.py
backend/federateddergchat/data/migrations/: env.py
backend/federateddergchat/http/: account.py  chat.py
backend/federateddergchat/http/templates/: base.html
backend/tests/: conftest.py  mocks.py  test_messagepump.py
backend/tests/data/: test_alembic.py  test_attachment.py  test_base.py  test_mastodon.py  test_migration.py  test_room.py  test_user.py
backend/tests/http/: test_messagepump.py
backend/tests/service/: test_attachment.py  test_message.py
(+88 files in other folders)
